criando o serviço de troca de senha por email

--- a/src/app/pages/recoverPassword/recover-password/recover-password.page.html
+++ b/src/app/pages/recoverPassword/recover-password/recover-password.page.html
@@ -10,4 +10,15 @@
       <ion-title size="large">Recover Password</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-grid>
+    <ion-row>
+      <ion-input type="text" labelPlacement="floating" [(ngModel)]="email">
+        <div slot="label">Email</div>
+      </ion-input>
+    </ion-row>
+    <ion-row>
+      <ion-button color="primary" (click)="sendConfirmationCode()">Send</ion-button>
+    </ion-row>
+  </ion-grid>
 </ion-content>
