started working on the news feature of the project

--- a/src/app/components/market-component/market-component.component.html
+++ b/src/app/components/market-component/market-component.component.html
@@ -45,7 +45,7 @@
             <td>{{crypto.current_price | currency}}</td>
 
             <td>
-              
+              <p [ngStyle]="{color: isValuePositive(crypto.price_change_percentage_24h) ? 'green' : 'red'}">{{crypto.price_change_percentage_24h | porcentageValue}}</p>
             </td>
 
 
