--- a/src/app/components/newsComponent/news-component/news-component.component.html
+++ b/src/app/components/newsComponent/news-component/news-component.component.html
@@ -1,3 +1,6 @@
-<p>
-  news-component works!
-</p>
+<div *ngIf="newsArray">
+  <div *ngFor="let feed of newsArray">
+    <p>{{feed.title}}</p>
+    <p>{{feed.authors}}</p>
+  </div>
+</div>
