--- a/src/app/components/market-component/market-component.component.html
+++ b/src/app/components/market-component/market-component.component.html
@@ -18,16 +18,19 @@
   <ion-row *ngIf="paginatedData.length > 0">
     <ion-col size="12">
       <table>
-        <thead>
+        <!-- <thead>
           <tr>
             <th>#</th>
             <th>Market Cap</th>
             <th>Price</th>
             <th>7d%</th>
           </tr>
-        </thead>
+        </thead> -->
         <tbody>
-          <!-- <app-crypto-row *ngFor="let crypto of paginatedData; index as i" [crypto]="crypto" [index]="i" [page]="page" [itemsPerPage]="itemsPerPage"></app-crypto-row> -->
+          <tr *ngFor="let crypto of paginatedData; index as i">
+            <app-crypto-row [crypto]="crypto" [index]="i" [page]="page" [itemsPerPage]="itemsPerPage"></app-crypto-row>
+
+          </tr>
         </tbody>
       </table>
     </ion-col>
