--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 3
+      Team
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,12 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 3</ion-title>
+      <ion-title size="large">Team</ion-title>
     </ion-toolbar>
   </ion-header>
 
-  <app-news-component></app-news-component>
+  <div *ngFor="let dev of devs">
+    <app-dev-component [name]="dev.name" [role]="dev.role" [role_description]="dev.role_description" [picture]="dev.picture"></app-dev-component>
+  </div>
+
 </ion-content>
